--- a/templates/index.html
+++ b/templates/index.html
@@ -63,11 +63,8 @@
             <div class="d-flex gap-2 mt-3">
                 <button type="submit" class="btn btn-primary">ログを生成</button>
                 <a href="/stats" class="btn btn-info">📊 統計情報を見る</a>
+                <a href="/tags/top" class="btn btn-outline-info">タグランキング</a>
             </div>
-
-            <!-- Tagify CSS/JS -->
-            <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@yaireo/tagify/dist/tagify.css" />
-            <script src="https://cdn.jsdelivr.net/npm/@yaireo/tagify"></script>
         </form>
     </div>
 </body>
