--- a/templates/result.html
+++ b/templates/result.html
@@ -21,6 +21,7 @@
     <div class="d-flex gap-2 mt-4">
         <a href="/" class="btn btn-secondary">← フォームに戻る</a>
         <a href="/stats" class="btn btn-info">📊 統計情報を見る</a>
+        <a href="/tags/top" class="btn btn-outline-info">タグランキング</a>
     </div>
 </body>
 </html>
