ダッシュボードの追加、DBの初期化など実施しました

--- a/templates/index.html
+++ b/templates/index.html
@@ -57,6 +57,7 @@
                 <button type="submit" class="btn btn-primary">ログを生成</button>
                 <a href="/stats" class="btn btn-info">📊 統計情報を見る</a>
                 <a href="/tags/top" class="btn btn-outline-info">タグランキング</a>
+                <a href="/dashboard" class="btn btn-success">ダッシュボード</a>
             </div>
         </form>
     </div>
