--- a/templates/result.html
+++ b/templates/result.html
@@ -22,6 +22,7 @@
         <a href="/" class="btn btn-secondary">← フォームに戻る</a>
         <a href="/stats" class="btn btn-info">📊 統計情報を見る</a>
         <a href="/tags/top" class="btn btn-outline-info">タグランキング</a>
+        <a href="/dashboard" class="btn btn-success mt-4">ダッシュボード</a>
     </div>
 </body>
 </html>
