--- a/templates/stats.html
+++ b/templates/stats.html
@@ -23,5 +23,6 @@
     </div>
 
     <a href="/" class="btn btn-secondary mt-4">← フォームに戻る</a>
+    <a href="/dashboard" class="btn btn-success mt-4 ms-2">ダッシュボード</a>
 </body>
 </html>
