--- a/templates/login.html
+++ b/templates/login.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}ログイン - 学習ログ{% endblock %}
+{% block title %}ログイン - 作業ログ{% endblock %}
 
 {% block content %}
 <div class="container mt-5">
