--- a/templates/result.html
+++ b/templates/result.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}整形ログ表示 - 学習ログ{% endblock %}
+{% block title %}整形ログ表示 - 作業ログ{% endblock %}
 
 {% block content %}
 <div class="container">
