--- a/templates/tags_top.html
+++ b/templates/tags_top.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}タグランキング - 学習ログ{% endblock %}
+{% block title %}タグランキング - 作業ログ{% endblock %}
 
 {% block extra_css %}
 <style>
